# effective-octo-robot

./: effective-octo-robot.cabal
.stack-work/install/x86_64-linux/lts-9.6/8.0.2/flag-cache/: HUnit-1.5.0.0-DvjF79OHhCC7SzfeEty4OI  MissingH-1.4.0.1-4I5T4TbNA9RIo1FM0FgAP  QuickCheck-2.9.2-LvlomhGMxrFBkX1zwiWpQu  ansi-terminal-0.6.3.1-3RTqikoQf47ajVD9m8zgB  async-2.1.1.1-8yywY4inVGRLJSCg60gBXj  call-stack-0.1.0-FYVrCPXGP9EGAuTW32963O  effective-octo-robot-0.1.0.0-KcrcswkT73U2JfS8YKFcKm  effective-octo-robot-0.1.0.0-Q5aDdngAqVKXeXe7pplHU  hslogger-1.2.10-Li6ZV5C1ftGLPA71zPNMlf  hspec-2.4.4-Ct0Af2AzisB8bPqGMHHFvj  hspec-core-2.4.4-Ezb0jq4rRfBJWZtpolvs1E  hspec-discover-2.4.4-99Suq6sFZ1T6o4isjc43TZ  hspec-expectations-0.8.2-DujBeQFEMmfJJRLad7XQgd  mtl-2.2.1-BLKBelFsPB3BoFeSWSOYj6  network-2.6.3.2-IsLM4TXcLoRI0fmmBYVyQz  old-locale-1.0.0.7-KGBP1BSKxH5GCm0LnZP04j  old-time-1.1.0.3-KWRsMSdY26c2L27Y9n9cyq  parsec-3.1.11-1aqiimsgq2dCv7eoaC8WuX  primitive-0.6.2.0-4578caNkWQ54Gt1mxLF2Yh  quickcheck-io-0.2.0-4pLO1WRxoBW9gt8EnME0zS  random-1.1-9tceXaeYIMZ4JrKq20Egog  regex-base-0.93.2-AYjYAsBidAc8f5XNm9b2Aa  regex-compat-0.95.1-7IGKoiHTSKL3opdpEZ0pO8  regex-posix-0.95.2-KQJt29lnRa45d6bFn9XkFO  setenv-0.1.1.3-8dEhk6JWvlmCmVyBammSpu  stm-2.4.4.1-JQn4hNPyYjP5m9AcbI88Ve  text-1.2.2.2-9UQZjEJZQFSGMffj1Z5g00  tf-random-0.5-CJZw1ZWS5MOJlR60HqKEZL
src/: Lib.hs
src/Compose/: Compose.hs
src/Search/: BinarySearch.hs
src/Sort/: BubbleSort.hs  MergeSort.hs  QuickSort.hs
src/Stepic/: Lists.hs
test/Compose/: ComposeSpec.hs
test/Search/: BinarySearchSpec.hs
test/Sort/: BubbleSortSpec.hs  MergeSortSpec.hs  QuickSortSpec.hs
test/Stepic/: ListsSpec.hs
(+12 files in other folders)
