name:                effective-octo-robot
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/effective-octo-robot#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Sort.MergeSort
                     , Sort.QuickSort
                     , Sort.BubbleSort
                     , Search.BinarySearch
                     , Stepic.Lists
  build-depends:       base >= 4.7 && < 5
                     , MissingH
  default-language:    Haskell2010

executable effective-octo-robot-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , effective-octo-robot
  default-language:    Haskell2010

test-suite effective-octo-robot-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , effective-octo-robot
                     , hspec
                     , hspec-discover
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/effective-octo-robot
